[gd_scene load_steps=4 format=3 uid="uid://dfndj2fv8i1b1"]

[ext_resource type="Script" path="res://options.gd" id="1_kuhav"]
[ext_resource type="PackedScene" uid="uid://cctika4gb5jks" path="res://MenuBG.tscn" id="2_03b55"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_32lav"]

[node name="MarginContainer" type="MarginContainer"]
offset_right = 626.0
offset_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
script = ExtResource("1_kuhav")

[node name="MenuBG" parent="." instance=ExtResource("2_03b55")]

[node name="Label" type="Label" parent="."]
offset_left = 50.0
offset_top = 334.0
offset_right = 576.0
offset_bottom = 386.0
text = "Resolution Scale, Supersampling, and
sensitivity control not yet implemented"
horizontal_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 50.0
offset_top = 50.0
offset_right = 576.0
offset_bottom = 670.0

[node name="Label" type="Label" parent="VBoxContainer"]
offset_right = 526.0
offset_bottom = 91.0
theme_override_font_sizes/font_size = 64
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resolution" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 95.0
offset_right = 526.0
offset_bottom = 132.0

[node name="ResLabel" type="Label" parent="VBoxContainer/Resolution"]
offset_right = 203.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 24
text = "Resolution Scale: "

[node name="ResSlider" type="HSlider" parent="VBoxContainer/Resolution"]
offset_left = 207.0
offset_right = 521.0
offset_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 25.0
value = 100.0
rounded = true
editable = false

[node name="ResScaleLabel" type="Label" parent="VBoxContainer/Resolution"]
offset_left = 525.0
offset_top = 7.0
offset_right = 526.0
offset_bottom = 30.0

[node name="Supersampling" type="HBoxContainer" parent="VBoxContainer"]
offset_left = 156.0
offset_top = 136.0
offset_right = 370.0
offset_bottom = 173.0
size_flags_horizontal = 4

[node name="SSLabel" type="Label" parent="VBoxContainer/Supersampling"]
offset_right = 186.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 24
text = "Supersampling: "

[node name="SSCheckBox" type="CheckBox" parent="VBoxContainer/Supersampling"]
offset_left = 190.0
offset_right = 214.0
offset_bottom = 37.0
disabled = true

[node name="Fullscreen" type="HBoxContainer" parent="VBoxContainer"]
offset_left = 90.0
offset_top = 177.0
offset_right = 435.0
offset_bottom = 214.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FSLabel" type="Label" parent="VBoxContainer/Fullscreen"]
offset_right = 132.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 24
text = "Fullscreen: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Fullscreen"]
offset_left = 136.0
offset_right = 345.0
offset_bottom = 37.0
item_count = 3
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Borderless Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Exclusive Fullscreen"
popup/item_2/id = 2

[node name="MouseSensitivity" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 218.0
offset_right = 526.0
offset_bottom = 255.0

[node name="Label" type="Label" parent="VBoxContainer/MouseSensitivity"]
offset_right = 195.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 24
text = "Look Sensitivity: "

[node name="SensSlider" type="HSlider" parent="VBoxContainer/MouseSensitivity"]
offset_left = 199.0
offset_right = 521.0
offset_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 1
rounded = true

[node name="Label2" type="Label" parent="VBoxContainer/MouseSensitivity"]
offset_left = 525.0
offset_top = 7.0
offset_right = 526.0
offset_bottom = 30.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 259.0
offset_right = 526.0
offset_bottom = 359.0
theme_override_constants/separation = 100
theme_override_styles/separator = SubResource("StyleBoxEmpty_32lav")

[node name="BackToMenu" type="Button" parent="VBoxContainer"]
offset_top = 363.0
offset_right = 526.0
offset_bottom = 394.0
text = "Back to Menu"

[connection signal="changed" from="VBoxContainer/Resolution/ResSlider" to="." method="_on_res_slider_changed"]
[connection signal="drag_ended" from="VBoxContainer/Resolution/ResSlider" to="." method="_on_res_slider_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/Resolution/ResSlider" to="." method="_on_res_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/Supersampling/SSCheckBox" to="." method="_on_ss_check_box_toggled"]
[connection signal="item_selected" from="VBoxContainer/Fullscreen/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="VBoxContainer/MouseSensitivity/SensSlider" to="." method="_on_sens_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
